# vibe

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  FUNDING.yml  LICENSE  README.md  RELEASING.md  build.sh  debug_call_lookup.ll  debug_extract_func_name.ll  debug_func_ir.ll  debug_module_ir.ll  debug_output.ll  debug_top_level_exprs.ll  test.vibe
.github/workflows/: release-seed.yml  renumber-chat.yml  static.yml
bootstrap/: codegen.ll  codegen_no_vibe.ll  dsl.ll  ffi.ll  lexer.ll  main.ll  main.s  main_no_vibe.ll  parser.ll
bootstrap/compiler/: bitcode.ll  codegen.ll  main.ll
bootstrap/lexer/: lexer.ll  lexer.vibe  lexer_no_vibe.ll
bootstrap/parser/: parser.ll  parser.vibe  parser_no_vibe.ll
bootstrap/runtime/: define-bitcode.ll  eval.ll  eval.s  ffi.ll  runtime.ll  runtime.s  special.ll  special.s  types.ll  types.s
bootstrap/types/: types.ll
bootstrap/vibes/: vibe001.md
doc/: README.md
doc/chats/: 0001-initial-setup.md  0002-codegen-compilation-fixes.md  0003-bytevector-and-vertical-bar-syntax.md  0004-string-constant-generation-fix.md  0005-llvm-c-api-migration.md  0006-targetmachine-api-and-object-file-generation.md  0007-parseir-undefined-globals-test.md  0008-llvm-parsing-with-undeclared-symbols.md  0009-parameter-resolution-fix.md  0010-parameter-type-collection-and-global-lookup-fix.md  0011-llvm-call-segfault-investigation.md  0012-ffi-refactor-and-segfault-fix.md  0013-let-star-binding-storage-and-retrieval.md  0014-llvm-gep-type-inference.md  0015-llvm-gep-explicit-type-and-lexer-number-fix.md  0016-lexer-synchronization-and-build-phase-restructure.md  0017-temp-module-disposal-and-dsl-extension-patterns.md  0018-array-type-parsing-and-architectural-separation.md  0019-lexer-parser-codegen-architecture-refactor.md  0020-memory-leaks-visitor-pattern-and-label-handling.md  0021-terminator-validation-and-predicate-fix.md  0022-lexer-function-migration-and-declare-function.md  0025-complete-parser-migration-and-sync-strategy.md  0026-runtime-removal-ffi-migration-source-reorg.md  0027-codegen-migration-batch-1.md  0029-doom-module-treesit-fixes.md  0032-i1-type-fix-and-string-constant-migration.md  0033-full-codegen-migration.md  0034-ssa-cross-block-resolution-plan.md  0035-codegen-migration-phase-1-and-2.md  0040-codegen-migration-phase-1-3-partial.md  0041-self-host-kernel-ir-bug-and-migration-blocker.md  0043-codegen-incremental-migration-session.md  0045-complete-codegen-migration.md  0048-self-hosting-bootstrap-removal.md  0049-design-docs-overhaul-and-contributor-onboarding.md  0050-macro-expander-foundation.md  0051-simple-form-substitution-macros.md  0052-inline-macro-expansion-driver.md  0053-linear-macro-pattern-matching.md
doc/design/: bootstrap-plan.md  cross-compilation-plan.md  ffi-llvm-integration.md  llvm-dsl-deferred-methods.md  macro-system.md  narrow-bootstrap-goal.md  r7rs-compliance.md  vision.md
doc/pages/: index.html
doc/release-notes/: v0.0.2-seed.md
docs/: CNAME  README.md
docs/chats/: 0001-initial-setup.md  0002-codegen-compilation-fixes.md  0003-bytevector-and-vertical-bar-syntax.md  0004-string-constant-generation-fix.md  0005-llvm-c-api-migration.md  0006-targetmachine-api-and-object-file-generation.md  0007-parseir-undefined-globals-test.md  0008-llvm-parsing-with-undeclared-symbols.md  0009-parameter-resolution-fix.md  0010-parameter-type-collection-and-global-lookup-fix.md  0011-llvm-call-segfault-investigation.md  0012-ffi-refactor-and-segfault-fix.md  0013-let-star-binding-storage-and-retrieval.md  0014-llvm-gep-type-inference.md  0015-llvm-gep-explicit-type-and-lexer-number-fix.md  0016-lexer-synchronization-and-build-phase-restructure.md  0017-temp-module-disposal-and-dsl-extension-patterns.md  0018-array-type-parsing-and-architectural-separation.md  0019-lexer-parser-codegen-architecture-refactor.md  0020-memory-leaks-visitor-pattern-and-label-handling.md  0021-terminator-validation-and-predicate-fix.md  0022-lexer-function-migration-and-declare-function.md  0023-codegen-bugfixes-and-lexer-no-vibe-removal.md  0024-parser-partial-migration-to-vibe.md  0025-complete-parser-migration-and-sync-strategy.md  0026-runtime-removal-ffi-migration-source-reorg.md  0027-codegen-migration-batch-1.md  0028-debug-spurious-main-and-paren-fix.md  0029-doom-module-treesit-fixes.md  0030-codegen-batch-2-parens-parse-error.md  0031-codegen-batch-3-migration.md  0032-i1-type-fix-and-string-constant-migration.md  0033-full-codegen-migration.md  0034-ssa-cross-block-resolution-plan.md  0035-codegen-migration-phase-1-and-2.md  0036-codegen-tier-a-phi-and-init.md  0037-phi-to-alloca-migration.md  0038-codegen-migration-and-self-host-terminator-bug.md  0039-self-host-missing-declarations-fix.md  0040-codegen-migration-phase-1-3-partial.md  (+23 more)
docs/design/: bootstrap-plan.md  cross-compilation-plan.md  ffi-llvm-integration.md  llvm-dsl-deferred-methods.md  macro-system.md  narrow-bootstrap-goal.md  primitive-forms.md  r7rs-compliance.md  r7rs-syntax.bnf
docs/pages/: index.html
docs/release-notes/: v0.0.3-seed.md  v0.0.4-seed.md
doom-modules/lang/vibe/: README.org  config.el  packages.el
editors/emacs/: vibe-mode.el
editors/vscode/: package.json
editors/vscode/src/: extension.ts
emacs/: README.md  vibe-mode.el  vibe-ts.el
kernel/: codegen.vibe  dsl.vibe  expander.vibe  ffi.vibe  ffi_libc_darwin.vibe  lexer.vibe  macros.vibe  main.vibe  parser.vibe  types.vibe  util.vibe
scripts/: concat_vibe.sh  edit_build_test.sh
src/: main.ll
src/bootstrap/: lexer.ll  main.ll  main.s  parser.ll  runtime.ll  runtime2.s
src/vibe/base/: binary.vibe  event.vibe  file.vibe  (+12 more)
test/: extra_rparen.vibe  hello_world.vibe  let_store_br_minimal.vibe  macro_ast_ref_shape.vibe  macro_define_via_expand.vibe  macro_ellipsis_nested.vibe  macro_hello.vibe  macro_literals_clauses.vibe  run-tests.vibe  run_test.sh  test_parse_with_undeclared.c  unclosed_paren.vibe
tree-sitter-vibe/: Cargo.toml  README.md  binding.gyp  build.sh  grammar.js  package-lock.json  package.json
tree-sitter-vibe/src/: grammar.json  node-types.json  parser.c
(+16 files in other folders)
